# lightning_circuit

./: .gitignore  CMakeLists.txt  Makefile  README.md  get-libsnark
lib/: gadget_neg.hpp  lib_zero_knowledge.h
src/: gadget.hpp  snark.hpp  test.cpp
src/lib/: lib_zero_knowledge.cpp  snark.hpp  utils.hpp
src/libMultiInput/: gadget_neg.hpp  lib_zero_knowledge.cpp  lib_zero_knowledge.h  snark.hpp  utils.hpp
src/zkTrias/: gadget.hpp  gadget_neg.hpp  snark.hpp  zktrias.cpp  zktrias.hpp
